--- a/frontend/src/sass/_common.scss
+++ b/frontend/src/sass/_common.scss
@@ -385,6 +385,7 @@ $border-radius-medium: 12px;
 $header-height: 48px;
 $footer-height: 48px;
 $info-content-max-width: 800px;
+$info-content-max-width-mobile: 350px;
 $main-content-max-width: 1500px;
 $main-content-padding: $spacing-xl;
 $main-content-gap: 24px;
